--- a/frontend/src/app/pages/components/top-bar/top-bar.component.scss
+++ b/frontend/src/app/pages/components/top-bar/top-bar.component.scss
@@ -12,6 +12,7 @@ div{
     background-color: #151515;
     border-radius: 0px 0px 10px 10px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    z-index: 100;
 
     nav{
         display: flex;
